used CSS to fix alignment and pie chart sizing and positioning

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,7 +1,21 @@
 body {
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
+}
 
+#app{
+  width:100vw;
+  height:100vh;
+}
+
+div{
+  width: 100%;
+  height: 100%;
+}
+
+#budget-wrapper{
+  width:100%;
+  height:100%
 }
 
 #app {
@@ -23,12 +37,15 @@ button {
 }
 
 .welcome-page {
-  width: 100vh;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
-.welcome-create-budget-button {
+#welcome-create-budget-button {
   margin: 0 auto;
+  width: 120px;
+  height: 100px;
+  text-align: center;
 }
 
 #my_dataviz {
@@ -39,5 +56,10 @@ button {
 #graph-container{
   width:100%;
   height:100%;
+}
+
+#title-bar{
+  text-align: center;
+  height:100px
 }
 
